5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1644_1053.log
== TEST (2019-04-09 17:00:59) 
-- CODE:
nome=input("Nome do Patrono: ")

if (nome = cervo):
	print("cervo eh patrono do Harry Potter")
	
else:
	print(nome "nao eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 3
    if (nome = cervo):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:01:16) 
-- CODE:
nome=input("Nome do Patrono: ")

if (nome = "cervo"):
	print("cervo eh patrono do Harry Potter")
	
else:
	print(nome "nao eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 3
    if (nome = "cervo"):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:02:32) 
-- CODE:
nome=input("Nome do Patrono: ")

if (nome = "cervo"):
	print("cervo eh patrono do Harry Potter")
	


-- ERROR:
File "XXXX", line 3
    if (nome = "cervo"):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:03:00) 
-- CODE:
nome=input("Nome do Patrono: ")

if (nome = 'cervo' ):
	print("cervo eh patrono do Harry Potter")
	


-- ERROR:
File "XXXX", line 3
    if (nome = 'cervo' ):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:03:41) 
-- CODE:
nome= input("Nome do Patrono: ")

if (nome = 'cervo' ):
	print("cervo eh patrono do Harry Potter")
	
else:
	print(nome "nao eh patrono do Harry Potter")
	


-- ERROR:
File "XXXX", line 3
    if (nome = 'cervo' ):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:42:32) 
-- CODE:
nome= input("Nome do Patrono: ")

if (nome = 'cervo' ):
	print("cervo eh patrono do Harry Potter")
	
else:
	print(nome "nao eh patrono do Harry Potter")
	


-- ERROR:
File "XXXX", line 3
    if (nome = 'cervo' ):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:43:37) 
-- CODE:
nome= input("Nome do Patrono: ")

if (nome == 'cervo' ):
	print("cervo eh patrono do Harry Potter")
	
else:
	print(nome "nao eh patrono do Harry Potter")
	


-- ERROR:
File "XXXX", line 7
    print(nome "nao eh patrono do Harry Potter")
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:45:09) 
-- CODE:
nome= input("Nome do Patrono: ")

if (nome == "cervo" ):
	print("cervo eh patrono do Harry Potter")
	
else:
	print(nome, "nao eh patrono do Harry Potter")
	


-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:45:20) 
-- CODE:
nome= input("Nome do Patrono: ")

if (nome == "cervo" ):
	print("cervo eh patrono do Harry Potter")
	
else:
	print(nome, "nao eh patrono do Harry Potter")
	


-- EXECUTION TIME:
0.166703
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
